--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
     <button class="modalBtn">Modal Aç</button> -->
 
-    <ul class="products"></ul>
+    <!-- <ul class="products"></ul> -->
+
+    <div class="container">
+      <h1>Dark Mode / Light Mode</h1>
+      <button id="themeToggle">Temayı Değiştir</button>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     <script src="js/app.js"></script>
